fix alignment

--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -1,5 +1,4 @@
 .Home {
-  text-align: center;
   .content {
     max-width: 1200px;
     margin: auto;
